Accueil admin/prof

--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -7,80 +7,19 @@
 
     <section class="content">
         <div class="box-body">
-            <div class="row">
-                <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-blue">
-                        <div class="inner">
-                            <h3>??</h3>
-
-                            <p> Eleves enregistrés </p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-person-add"></i>
-                        </div>
-                        <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">
-                            Ajouter un utilisateur
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-red">
-                        <div class="inner">
-                            <h3>??</h3>
-
-                            <p> Professeurs enregistrés </p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-person-add"></i>
-                        </div>
-                        <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">
-                            Ajouter un utilisateur
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-green">
-                        <div class="inner">
-                            <h3>??</h3>
-
-                            <p>Promotions enregistrés</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-university"></i>
-                        </div>
-                        <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">
-                            Ajouter une Promotion
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-aqua">
-                        <div class="inner">
-                            <h3>123</h3>
-
-                            <p> Admin </p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-android-lock"></i>
-                        </div>
-                        <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">
-                            Administration
-                        </a>
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-lg-3 col-xs-6">
                         <!-- small box -->
                         <div class="small-box bg-aqua">
                             <div class="inner">
-                                <h3>150</h3>
+                                <h3>12</h3>
 
-                                <p>New Orders</p>
+                                <p>Utilisateurs enregistrés</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-bag"></i>
                             </div>
-                            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Ajouter Utilisateur <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
@@ -88,14 +27,14 @@
                         <!-- small box -->
                         <div class="small-box bg-green">
                             <div class="inner">
-                                <h3>53<sup style="font-size: 20px">%</sup></h3>
+                                <h3>12<sup style="font-size: 20px">%</sup></h3>
 
-                                <p>Bounce Rate</p>
+                                <p>Professeurs</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-stats-bars"></i>
                             </div>
-                            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Ajouter Utilisateur <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
@@ -103,14 +42,14 @@
                         <!-- small box -->
                         <div class="small-box bg-yellow">
                             <div class="inner">
-                                <h3>44</h3>
+                                <h3>12</h3>
 
-                                <p>User Registrations</p>
+                                <p>Promotions</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-person-add"></i>
                             </div>
-                            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="{{ path ('promotion') }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
@@ -118,9 +57,9 @@
                         <!-- small box -->
                         <div class="small-box bg-red">
                             <div class="inner">
-                                <h3>65</h3>
+                                <h3></h3>
 
-                                <p>Unique Visitors</p>
+                                <p>Admin</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-pie-graph"></i>
