--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -49,7 +49,7 @@
                             <div class="icon">
                                 <i class="ion ion-university"></i>
                             </div>
-                            <a href="{{ path ('promotion') }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="{{ path ('promotion') }}" class="small-box-footer">Toutes les promotions<i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
