Accueil admin/prof

--- a/vues/professeurs.html.twig
+++ b/vues/professeurs.html.twig
@@ -32,7 +32,7 @@
                           <tr>
                             <th>{{ professeur.getNom }}</th>
                             <th>{{ professeur.getPrenom }}</th>
-                            <th>{{ professeur.getEmail }}</th>
+                            <th>{{ professeur.getMail }}</th>
                             <th style="width:60px; text-align:center;" >
                                   <div class="btn-group">
                                       <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
