Affichage dynamique Acceuil prof-admin

--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -12,8 +12,7 @@
                         <!-- small box -->
                         <div class="small-box bg-aqua">
                             <div class="inner">
-                                <h3>12</h3>
-
+                                <h3>{{ eleves|length }}</h3>
                                 <p>Eleves</p>
                             </div>
                             <div class="icon">
@@ -27,8 +26,7 @@
                         <!-- small box -->
                         <div class="small-box bg-green">
                             <div class="inner">
-                                <h3>12</h3>
-
+                                <h3>{{ professeurs|length }}</h3>
                                 <p>Professeurs</p>
                             </div>
                             <div class="icon">
@@ -42,7 +40,7 @@
                         <!-- small box -->
                         <div class="small-box bg-yellow">
                             <div class="inner">
-                                <h3>12</h3>
+                                <h3>{{ promotions|length }}</h3>
 
                                 <p>Promotions</p>
                             </div>
