Fix Orthographe - LIen

--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -57,12 +57,12 @@
                             <div class="inner">
                                 <h3>Admin</h3>
 
-                                <p>Parte Administration</p>
+                                <p>Partie Administration</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-android-lock"></i>
                             </div>
-                            <a href="#" class="small-box-footer">Administration <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Administration <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
