--- a/vues/professeurs.html.twig
+++ b/vues/professeurs.html.twig
@@ -36,7 +36,7 @@
                             <th style="width:60px; text-align:center;" >
                                   <div class="btn-group">
                                       <a href="{{ path('utilisateur_edit_', { 'id': professeur.getId() }) }}" title="Modifier" type="button" style="margin-right:5px;" class="btn btn-warning btn-flat"><i class="fa fa-pencil"></i></a>
-                                      <a href="{{ path('utilisateur_sup_', { 'id': professeur.getId() }) }}" title="Supprimer" type="button" style="margin-right:5px;" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></a>
+                                      <a href="{{ path('utilisateur_sup_', { 'id': professeur.getId() }) }}" title="Supprimer" type="button" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></a>
                                   </div>
                             </th>
                           </tr>
