--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -107,7 +107,7 @@
                   <ul class="treeview-menu">
                       <li><a href="{{ path ('ajout_utilisateur') }}"><i class="fa fa-user-plus"></i>Ajouter</a></li>
                       <li><a href="{{ path ('professeur') }} "><i class="fa fa-user"></i>Professeurs</a></li>
-                      <li><a href="#"><i class="fa fa-user-secret"></i> Admin </a></li>
+                      <li><a href="{{ path ('eleve') }} "><i class="fa fa-user"></i>Eleves</a></li>
                   </ul>
               </li>
             {% endif %}
