Accueil Admin & Prof

--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -19,6 +19,7 @@
                                 <i class="ion ion-person-add"></i>
                             </div>
                             <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Ajouter Utilisateur <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="{{ path ('eleve') }}" class="small-box-footer">Toutes les Eleves <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
@@ -33,6 +34,7 @@
                                 <i class="ion ion-person-add"></i>
                             </div>
                             <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Ajouter Utilisateur <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="{{ path ('professeur') }}" class="small-box-footer">Tous les Professeurs <i class="fa fa-arrow-circle-right"</i></a>
                         </div>
                     </div>
                     <!-- ./col -->
@@ -47,6 +49,7 @@
                             <div class="icon">
                                 <i class="ion ion-university"></i>
                             </div>
+                            <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">Ajouter une Promotion<i class="fa fa-arrow-circle-right"></i></a>
                             <a href="{{ path ('promotion') }}" class="small-box-footer">Toutes les promotions <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
