--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -69,7 +69,7 @@
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                        <div class="box-body">
+                        <div class="box-body">//
                             <form role="form" method="POST" action={{ path('ajout_utilisateur') }}>
                                 <!-- text input -->
                                 <div class="form-group">
