--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -34,7 +34,7 @@
                                 <i class="ion ion-person-add"></i>
                             </div>
                             <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Ajouter Utilisateur <i class="fa fa-arrow-circle-right"></i></a>
-                            <a href="{{ path ('professeur') }}" class="small-box-footer">Tous les Professeurs <i class="fa fa-arrow-circle-right"</i></a>
+                            <a href="{{ path ('professeur') }}" class="small-box-footer">Tous les Professeurs <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
