--- a/vues/professeurs.html.twig
+++ b/vues/professeurs.html.twig
@@ -6,6 +6,7 @@
     <h1>
         Professeurs
         <small>liste</small>
+        <a href="{{ path('ajout_utilisateur') }}" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
     </h1>
         </section>
 
@@ -15,7 +16,7 @@
             <div class="col-xs-12">
               <div class="box box-warning">
                 <div class="box-header">
-                  <h3 class="box-title">Professeurs</h3>
+                  <h3 class="box-title"></h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
                   <table id="example1" class="table table-bordered table-striped">
