Accueil Admin & Prof

--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -49,6 +49,7 @@
                         <th>Nom</th>
                         <th>Prenom</th>
                         <th>Email</th>
+                        <th>Promotion</th>
                         <th style="width:60px;">Action</th>
                       </tr>
                     </tfoot>
