Accueil Admin & Prof

--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -35,6 +35,7 @@
                             <th>{{ eleve.getNom }}</th>
                             <th>{{ eleve.getPrenom }}</th>
                             <th>{{ eleve.getMail }}</th>
+                            <th>{{ eleve.getPromotion }}</th>
                             <th style="width:60px; text-align:center;" >
                                   <div class="btn-group">
                                       <a href="{{ path('utilisateur_edit_', { 'id': eleve.getId() }) }}" title="Modifier" type="button" style="margin-right:5px;" class="btn btn-warning btn-flat"><i class="fa fa-pencil"></i></a>
