--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -10,7 +10,7 @@
         <th> Situations Obligatoires </th>
         <th> Competences mises en oeuvre </th>
     </tr>
-    <tr>
+    <tr style="border : 5px;">
         <th> Situations professionnelle(intitulé et liste des documents et productions associés)</th>
         {% for competence in competences %}
             <th> {{ competence.getReference - competence.getLibelle }} </th>
