--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -11,9 +11,9 @@
         <th> Competences mises en oeuvre </th>
     </tr>
     <tr style="border : 5px;">
-        <th> Situations professionnelle(intitulé et liste des documents et productions associés)</th>
+        <td> Situations professionnelle(intitulé et liste des documents et productions associés)</td>
         {% for competence in competences %}
-            <th> {{ competence.getReference - competence.getLibelle }} </th>
+            <td> {{ competence.getReference - competence.getLibelle }} </td>
         {% endfor %}
     </tr>
 
