--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -5,19 +5,19 @@
     <h3>NOM et Prénom du candidat :</h3><h1>Parcours SLAM</h1><h3>N° du candidat :</h3>
 </section>
 <section class="content">
-    <thead>
+    <table border="1">
         <tr>
             <th></th>
             <th> Situations Obligatoires </th>
             <th> Competences mises en oeuvre </th>
         </tr>
-    </thead>
-    <tbody style="border:1px solid black; ">
-        <td> Situations professionnelle(intitulé et liste des documents et productions associés)</td>
+        <tr>
+            <td> Situations professionnelle(intitulé et liste des documents et productions associés)</td>
         {% for competence in competences %}
             <td> {{ competence.getReference - competence.getLibelle }} </td>
         {% endfor %}
-    </tbody>
+        </tr>
+    </table>
 
 </section>
 {% endblock %}
