--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -9,7 +9,7 @@
         <tr>
             <th></th>
             <th> Situations Obligatoires </th>
-            <th> Competences mises en oeuvre </th>
+            <th colspan="35"> Competences mises en oeuvre </th>
         </tr>
         <tr>
             <td> Situations professionnelle(intitulé et liste des documents et productions associés)</td>
@@ -18,6 +18,5 @@
         {% endfor %}
         </tr>
     </table>
-
 </section>
 {% endblock %}
