--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -8,7 +8,7 @@
     <table border="1">
         <tr>
             <th></th>
-            <th> Situations Obligatoires </th>
+            <th colspan="4"> Situations Obligatoires </th>
             <th colspan="54"> Competences mises en oeuvre </th>
         </tr>
         <tr>
