--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -14,7 +14,7 @@
         <tr>
             <td> Situations professionnelle(intitulé et liste des documents et productions associés)</td>
         {% for competence in competences %}
-            <td> {{ competence.getReference - competence.getLibelle }} </td>
+            <td> {{ competence.getReference() - competence.getLibelle() }} </td>
         {% endfor %}
         </tr>
     </table>
