--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -1,7 +1,7 @@
 
 {% block content %}
 <section class="content-header">
-    <h1 style="text-align: center;"> BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION    - TABLEAU DE COMPETENCES </h1>
+    <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
     <h3>NOM et Prénom du candidat :</h3><h1>Parcours SLAM</h1><h3>N° du candidat :</h3>
 </section>
 <section class="content">
@@ -12,9 +12,9 @@
             <th colspan="50"> Competences mises en oeuvre </th>
         </tr>
         <tr>
-            <td> Situations professionnelle(intitulé et liste des documents et productions associés)</td>
+            <td><strong>Situations professionnelle(intitulé et liste des documents et productions associés)</strong></td>
         {% for competence in competences %}
-            <td> {{ competence.getReference()}} - {{  competence.getLibelle() }} </td>
+            <td class="tableau-vertical"> {{ competence.getReference()}} - {{  competence.getLibelle() }} </td>
         {% endfor %}
         </tr>
     </table>
