--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -1,4 +1,6 @@
-
+<head>
+<link rel="stylesheet" href="{{ app.request.basepath }}/bootstrap/css/bootstrap.css">
+</head>
 {% block content %}
 <section class="content-header">
     <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
