--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -7,7 +7,7 @@
     <h3>NOM et Prénom du candidat :</h3><h1>Parcours SLAM</h1><h3>N° du candidat :</h3>
 </section>
 <section class="content">
-    <table border="1">
+    <table border="1" style="width:100%">
     <!--    <tr>
             <th></th>
             <th colspan="4"> Situations Obligatoires </th>
