--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -7,12 +7,12 @@
     <h3>NOM et Prénom du candidat :</h3><h1>Parcours SLAM</h1><h3>N° du candidat :</h3>
 </section>
 <section class="content">
-    <table border="1" style="width:100%">
-    <!--    <tr>
+    <table border="1">
+        <tr>
             <th></th>
             <th colspan="4"> Situations Obligatoires </th>
             <th colspan="50"> Competences mises en oeuvre </th>
-        </tr> -->
+        </tr>
         <tr>
             <td style="text-align: center;"><strong>Situations professionnelle(intitulé et liste des documents et productions associés)</strong></td>
         {% for competence in competences %}
