--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -10,8 +10,8 @@
     <table border="1">
         <tr>
             <th></th>
-            <th colspan="4"> Situations Obligatoires </th>
-            <th colspan="50"> Competences mises en oeuvre </th>
+            <th colspan="4" style="text-align: center"> Situations Obligatoires </th>
+            <th colspan="50" style="text-align: center"> Competences mises en oeuvre </th>
         </tr>
         <tr>
             <td style="text-align: center;"><strong>Situations professionnelle(intitulé et liste des documents et productions associés)</strong></td>
