--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6789,6 +6789,7 @@ button.close {
 }
 /* JDL */
 .tableau-vertical-div{
+  position: absolute;
   width: 170px;
   transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg); /* Safari/Chrome */
