--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -10,7 +10,7 @@
     <table border="1">
         <tr>
             <th></th>
-            <th colspan="4" style="text-align: center"> Situations Obligatoires </th>
+            <th colspan="4" style="text-align: center; width: 400px;"> Situations Obligatoires </th>
             <th colspan="50" style="text-align: center"> Competences mises en oeuvre </th>
         </tr>
         <tr>
