--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6798,7 +6798,7 @@ button.close {
 }
 .tableau-vertical-th{
   height: 800px;
-  text-align: left;
+  text-align: right;
   white-space:nowrap;
 }
 .tableau-width{
