--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6798,7 +6798,7 @@ button.close {
 }
 .tableau-vertical-th{
   height: 900px;
-  vertical-align: text-bottom;
+  vertical-align: bottom;
   white-space:nowrap;
 }
 .tableau-width{
