--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="content-header">
     <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
-    <h3>NOM et Prénom du candidat :</h3><h1>Parcours SLAM</h1><h3>N° du candidat :</h3>
+    <div><div style="margin-right:300px"><h3>NOM et Prénom du candidat :</h3></div><div><h1>Parcours SLAM</h1></div><div><h3>N° du candidat :</h3></div></div>
 </section>
 <section class="content">
     <table border="1">
