--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -1,5 +1,6 @@
 <head>
 <link rel="stylesheet" href="{{ app.request.basepath }}/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="{{ app.request.basepath }}/bootstrap/css/bootstrap.min.css">
 </head>
 {% block content %}
 <section class="content-header">
