--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -6,13 +6,11 @@
 <section class="content-header">
     <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
     <div class="row">
-        <div style="margin-right:300px; width:100px">
-            <h3>NOM et Prénom du candidat :</h3>
-        </div>
-        <div style="width:100px;">
+        <div>
+            <h3 style="margin-right:300px;">NOM et Prénom du candidat :</h3>
+
             <h1>Parcours SLAM</h1>
-        </div>
-        <div style="width:100px;">
+
             <h3>N° du candidat :</h3>
         </div>
     </div>
