--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -6,11 +6,7 @@
 <section class="content-header">
     <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
         <div>
-            <h3 style="margin-right:300px;">NOM et Prénom du candidat :</h3>
-
-            <h1>Parcours SLAM</h1>
-
-            <h3>N° du candidat :</h3>
+            <h3 style="margin-right:300px;">NOM et Prénom du candidat : <small>Parcours SLAM</small>  N° du candidat :</h3>
         </div>
 </section>
 <section class="content">
