--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -1,5 +1,6 @@
 {% extends "layout.html.twig" %}
 
+
 {% block content %}
 <section class="content-header">
 
@@ -8,7 +9,7 @@
         <small>liste</small>
         <a href="{{ path('ajout_competence') }}" type="button" style="float:right;margin:-2px;margin-right:10px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
         <!-- <a href="exportpdf" target="_blank" type="button" style="float:right;margin:-2px;margin-right:10px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-file-pdf-o"></i><span style="margin:3px;">export PDF</span></a>-->
-        <a href="" type="button" style="float:right;margin:-2px;margin-right:10px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-clone"></i><span style="margin:3px;">export HTML</span></a>
+        <a href="{{ competence.newPDF() }}" type="button" style="float:right;margin:-2px;margin-right:10px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-clone"></i><span style="margin:3px;">export HTML</span></a>
     </h1>
 </section>
     <section class="content">
