--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -6,7 +6,7 @@
 <section class="content-header">
     <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
         <div>
-            <h3>NOM et Prénom du candidat : <Strong><span style="text-align: center;">Parcours SLAM</span></Strong> <span style="float:right; margin-right:500px;">N° du candidat :</span></h3>
+            <h3><span style="margin-right:1000px;">NOM et Prénom du candidat :</span><Strong><span style="text-align: center;">Parcours SLAM</span></Strong> <span style="float:right; margin-right:500px;">N° du candidat :</span></h3>
         </div>
 </section>
 <section class="content">
