--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -6,7 +6,7 @@
 
     <h1>
         Compétences
-        <small>liste</small>
+        <small>liste</small>//c'estlebowdel
         <a href="{{ path('ajout_competence') }}" type="button" style="float:right;margin:-2px;margin-right:10px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
         <!-- <a href="exportpdf" target="_blank" type="button" style="float:right;margin:-2px;margin-right:10px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-file-pdf-o"></i><span style="margin:3px;">export PDF</span></a>-->
         <a href="{{ competence.newPDF() }}" type="button" style="float:right;margin:-2px;margin-right:10px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-clone"></i><span style="margin:3px;">export HTML</span></a>
