test pdf sur stats

--- a/vues/stats.html.twig
+++ b/vues/stats.html.twig
@@ -6,7 +6,11 @@
         Tableau des competences
     </h1>
         </section>
+<?php
 
+$snappy = new Pdf();
+var_dump(get_class_methods($snappy));
+?>
         <!-- Main content -->
         <section class="content">
           <div class="row">
